# termia

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: README.ca.md  README.es.md  REGRESSION_CHECKS.md  STORAGE_MIGRATIONS.md  WINDOW_MIXIN_CONTRACTS.md
po/: ca.po  es.po  termia.pot
scripts/: compile_translations.py  install_dependencies.sh  run_test_instance.sh  termia-setup.sh
src/termia/: __init__.py  app.py  asbru_import.py  config_actions.py  config_io.py  connection_dialogs.py  connection_history_presenter.py  connection_history_view.py  connection_utils.py  constants.py  debug.py  file_transfer.py  general_preferences.py  i18n.py  keybinding_preferences.py  keybindings.py  main_menu.py  main_menu_actions.py  migrations.py  models.py  preferences.py  prompt_preferences.py  security_preferences.py  session_commands.py  sidebar.py  sidebar_projection.py  split_panes.py  statistics_presenter.py  statistics_view.py  stores.py  styles.py  tabs.py  (+8 more)
tests/: test_asbru_import.py  test_config_io.py  test_connection_history_presenter.py  test_debug.py  test_file_transfer.py  test_gtk_smoke.py  test_history.py  test_keybindings.py  test_main_menu.py  test_main_menu_actions.py  test_migrations.py  test_session_commands.py  test_sidebar_projection.py  test_statistics_presenter.py  test_statistics_utils.py  test_statistics_view.py  test_tabs.py  test_terminal_config.py  test_terminal_menu_actions.py  test_terminal_processes.py  test_terminal_view.py  test_ui_state.py  test_write_actions.py
(+2 files in other folders)
